--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <body>
     <section class="section-center">
       <!-- image -->
-      <!-- <article class="gift-img">
+      <article class="gift-img">
         <img src="./gift.jpeg" alt="gift" />
-      </article> -->
+      </article>
       <!-- info -->
       <article class="gift-info">
         <h3>old iphone giveaway</h3>
